# frmtpl-scaling-laws

./: .gitignore  CITATION.cff  DATA_LICENSE.md  README.md  REPRODUCING.md  pyproject.toml  requirements.txt
notebooks/: 01_colab_frmtpl_scaling.ipynb
results/: ensemble_scores.csv  run_scores.csv  scaling_fits.csv
results/outcome_diagnostics/: driver_age_band_summary.csv  driver_age_bonusmalus_interaction_summary.csv  driver_age_vehicle_age_interaction_summary.csv  full_data_glm_tabm_scores.csv  portfolio_outcome_summary.csv  top_age_bonusmalus_differences.csv
scripts/: create_outcome_diagnostics.py  make_figures.py  prepare_wuthrich_data.R  run_experiment.py
src/frmtpl_scaling/: __init__.py  analysis.py  config.py  data.py  losses.py  models.py  plots.py  preprocessing.py  train.py
tests/: test_analysis.py  test_data.py  test_losses.py  test_models.py  test_preprocessing.py  test_run_experiment_cli.py  test_smoke_experiment.py
