[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frmtpl-scaling"
version = "0.1.0"
description = "Colab-friendly freMTPL2 scaling-law experiments for actuarial ratemaking models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "GPL-2.0-or-later" }
dependencies = [
  "keras>=3.3.0,<4",
  "tensorflow>=2.16.0,<2.21",
  "numpy>=1.26,<2.3",
  "pandas>=2.0,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
